force-app/main/default/objects/Paperwork__c/Paperwork__c.object-meta.xml
<CustomObject>
    <label>Paperwork</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Paperwork Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paperworks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>