force-app/main/default/objects/Paperwork__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Paperworks</relationshipLabel>
    <relationshipName>Paperworks</relationshipName>
    <type>Lookup</type>
</CustomField>