force-app/main/default/objects/Paperwork__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Cost confirmation</fullName>
            </value>
            <value>
                <fullName>LOI</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Annex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>